migrate app to flutter v1.12

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
 
+    <style name="NormalTheme" parent="@android:style/Theme.Black.NoTitleBar">
+       
+    </style>
+
 </resources>
